# tw-gtasks-sync

./: .gitignore  README.md  pyproject.toml
src/tw_gtasks_sync/: __init__.py  __main__.py  cli.py  config.py  converters.py  gtasks_side.py  notify.py  sync.py  tw_side.py
